--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 REACT_APP_BUILD_ENV=dev
 
 REACT_APP_DEV_API_REGION=us-east-1
-REACT_APP_DEV_API_URL=https://0gkwc5kk3d.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_DEV_API_URL=https://yp8b2fhcxg.execute-api.us-east-1.amazonaws.com/dev
 
 REACT_APP_DEV_AUTH_REGION=us-east-1
 REACT_APP_DEV_AUTH_USER_POOL_ID=us-east-1_LdJvz26VH
