updated production api endpoint

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 REACT_APP_API_REGION=us-east-1
-REACT_APP_API_URL=https://vwtk1hcboj.execute-api.us-east-1.amazonaws.com/prod
+REACT_APP_API_URL=https://6wyhnsec54.execute-api.us-east-1.amazonaws.com/prod
 
 REACT_APP_AUTH_REGION=us-east-1
 REACT_APP_AUTH_USER_POOL_ID=us-east-1_uOQeKJ4OE
