--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -27,4 +27,4 @@ jobs:
 env:
   FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
   FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID_PROD }}
-  REACT_APP_BUILD_ENV: dev
+  REACT_APP_BUILD_ENV: prod
