--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,16 @@
 
+sonar.organization=calcutta-league
+sonar.projectKey=Calcutta-League_admin-client
+
 sonar.projectVersion=0.1.1
 
-# Encoding of the source code. Default is default system encoding
+# relative paths to source directories. More details and properties are described
+# in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
+sonar.sources=./src
+sonar.exclusions=**/__tests__/*.js
+sonar.language=js
+
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./test-report.xml
+
 sonar.sourceEncoding=UTF-8
