--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,7 @@ sonar.projectVersion=0.1.1
 sonar.sources=./src
 sonar.exclusions=**/__tests__/*.js
 sonar.language=js
+sonar.tests=**/__tests__/*.js
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=./test-report.xml
