--- a/.github/workflows/tests-pr.yml
+++ b/.github/workflows/tests-pr.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Get master
-      run: git fetch origin master
+    # - name: Get master
+    #   run: git fetch origin master
     - name: Install dependencies
       run:  npm install
     - name: Run Tests
