--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,9 +7,8 @@ sonar.projectVersion=0.1.1
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
-sonar.exclusions=./src/**/__tests__/*.js
+sonar.exclusions=./src/**/__tests__/*.test.js
 sonar.language=js
-sonar.tests=./src/**/__tests__/*.js
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
