--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,9 @@ sonar.projectVersion=0.1.1
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
-sonar.exclusions=./src/**/__tests__/*.test.js
+sonar.sources=./src
+sonar.exclusions=./serviceWorker.js
+sonar.coverage.exclusions=./**/__tests__/*.test.js
 sonar.language=js
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
