--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,8 +7,7 @@ sonar.projectVersion=0.1.1
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=./src
-sonar.exclusions=./serviceWorker.js
-sonar.coverage.exclusions=./**/__tests__/*.test.js
+sonar.exclusions=./serviceWorker.js,./setupTests.js,./**/__tests__/*.test.js
 sonar.language=js
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
