--- a/.github/workflows/tests-pr.yml
+++ b/.github/workflows/tests-pr.yml
@@ -19,6 +19,11 @@ jobs:
       run:  npm install
     - name: Run Tests
       run:  npm run test
+    - name: Fix code coverage paths
+      working-directory: ./coverage
+      run: |
+        sed -i 's/\/home\/runner\/work\/admin-client\/admin-client\//\/github\/workspace\//g' lcov.info
+        sed -i 's/\/home\/runner\/work\/admin-client\/admin-client\//\/github\/workspace\//g' ../test-report.xml
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
