--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,8 @@ sonar.projectVersion=0.1.1
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=./src
 sonar.exclusions=serviceWorker.js,setupTests.js,**/__tests__/*.test.js
+sonar.tests=./src
+sonar.test.inclusions=**/__tests__/*.test.js,**/*.test.js
 sonar.language=js
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
