--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ REACT_APP_AUTH_USER_POOL_ID=us-east-1_uOQeKJ4OE
 REACT_APP_AUTH_APP_CLIENT_ID=60cno13f4qhhs9f38k0j71rtnu
 
 REACT_APP_DEV_API_REGION=us-east-1
-REACT_APP_DEV_API_URL=https://f48loux434.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_DEV_API_URL=https://x8mbqzab0d.execute-api.us-east-1.amazonaws.com/dev
 
 REACT_APP_DEV_AUTH_REGION=us-east-1
 REACT_APP_DEV_AUTH_USER_POOL_ID=us-east-1_LdJvz26VH
