--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ REACT_APP_API_REGION=us-east-1
 REACT_APP_API_URL=https://prd9ut5zfb.execute-api.us-east-1.amazonaws.com/prod
 REACT_APP_TOURNAMENT_SERVICE_API_URL=https://hplbn1dokh.execute-api.us-east-1.amazonaws.com/prod
 REACT_APP_SPORTS_SERVICE_API_URL=https://r0kdo14uxi.execute-api.us-east-1.amazonaws.com/prod
+REACT_APP_TOURNAMENT_SETTINGS_SERVICE_API_URL=placeholder
 
 REACT_APP_AUTH_REGION=us-east-1
 REACT_APP_AUTH_USER_POOL_ID=us-east-1_uOQeKJ4OE
@@ -12,6 +13,7 @@ REACT_APP_DEV_API_REGION=us-east-1
 REACT_APP_DEV_API_URL=https://tsfwii0xk3.execute-api.us-east-1.amazonaws.com/dev
 REACT_APP_DEV_TOURNAMENT_SERVICE_API_URL=https://bg9kvpommg.execute-api.us-east-1.amazonaws.com/dev
 REACT_APP_DEV_SPORTS_SERVICE_API_URL=https://kz02thubzf.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_DEV_TOURNAMENT_SETTINGS_SERVICE_API_URL=https://ifcm561hdj.execute-api.us-east-1.amazonaws.com/dev
 
 REACT_APP_DEV_AUTH_REGION=us-east-1
 REACT_APP_DEV_AUTH_USER_POOL_ID=us-east-1_LdJvz26VH
