--- a/.env
+++ b/.env
@@ -10,11 +10,11 @@ REACT_APP_AUTH_USER_POOL_ID=us-east-1_uOQeKJ4OE
 REACT_APP_AUTH_APP_CLIENT_ID=60cno13f4qhhs9f38k0j71rtnu
 
 REACT_APP_DEV_API_REGION=us-east-1
-REACT_APP_DEV_API_URL=https://tsfwii0xk3.execute-api.us-east-1.amazonaws.com/dev
-REACT_APP_DEV_TOURNAMENT_SERVICE_API_URL=https://bg9kvpommg.execute-api.us-east-1.amazonaws.com/dev
-REACT_APP_DEV_SPORTS_SERVICE_API_URL=https://kz02thubzf.execute-api.us-east-1.amazonaws.com/dev
-REACT_APP_DEV_TOURNAMENT_SETTINGS_SERVICE_API_URL=https://ifcm561hdj.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_DEV_API_URL=https://l75gtebd86.execute-api.us-east-1.amazonaws.com/stage
+REACT_APP_DEV_TOURNAMENT_SERVICE_API_URL=https://xeoe3w02ke.execute-api.us-east-1.amazonaws.com/stage
+REACT_APP_DEV_SPORTS_SERVICE_API_URL=https://fyhmno7vz4.execute-api.us-east-1.amazonaws.com/stage
+REACT_APP_DEV_TOURNAMENT_SETTINGS_SERVICE_API_URL=https://79q5dh04cj.execute-api.us-east-1.amazonaws.com/stage
 
 REACT_APP_DEV_AUTH_REGION=us-east-1
-REACT_APP_DEV_AUTH_USER_POOL_ID=us-east-1_LdJvz26VH
-REACT_APP_DEV_AUTH_APP_CLIENT_ID=2p60r220r4o0bbuh8pv8gj3gru
+REACT_APP_DEV_AUTH_USER_POOL_ID=us-east-1_oTB4UuxVE
+REACT_APP_DEV_AUTH_APP_CLIENT_ID=5c6n55b7keoqut1bm33up0ubsu
