--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -8,12 +8,18 @@ on:
 jobs:
   build_and_deploy:
     name: Deploy to firebase hosting
+    environment: stage
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
       - name: use nodejs
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
       - run: npm install -g firebase-tools
@@ -21,10 +27,10 @@ jobs:
       - run: CI=false npm run build
       - run: |
           firebase use --add $FIREBASE_PROJECT_ID
-          firebase deploy --only hosting --token $FIREBASE_TOKEN
+          firebase deploy --only hosting # --token $FIREBASE_TOKEN
 
   
 env:
   FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-  FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID_DEV }}
+  FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
   REACT_APP_BUILD_ENV: dev
