--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -11,6 +11,10 @@ jobs:
     environment: stage
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
       - uses: actions/checkout@v3
       - id: 'auth'
@@ -22,12 +26,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-      - run: npm install -g firebase-tools
       - run: npm install
       - run: CI=false npm run build
       - run: |
-          firebase use --add $FIREBASE_PROJECT_ID
-          firebase deploy --only hosting # --token $FIREBASE_TOKEN
+          npx firebase use --add ${{ steps.auth.outputs.project_id }}
+          npx firebase deploy --only hosting # --token $FIREBASE_TOKEN
 
   
 env:
