--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -26,11 +26,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16.x'
+      - run: npm install -g firebase-tools
       - run: npm install
       - run: CI=false npm run build
       - run: |
-          npx firebase use --add ${{ steps.auth.outputs.project_id }}
-          npx firebase deploy --only hosting # --token $FIREBASE_TOKEN
+          echo ${{ steps.auth.outputs.project_id }}
+          firebase use --add ${{ steps.auth.outputs.project_id }}
+          firebase deploy --only hosting # --token $FIREBASE_TOKEN
 
   
 env:
