--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -6,33 +6,59 @@ on:
     branches: stage
 
 jobs:
+  # build_and_deploy:
+  #   name: Deploy to firebase hosting
+  #   environment: stage
+  #   runs-on: ubuntu-latest
+
+  #   permissions:
+  #     contents: 'read'
+  #     id-token: 'write'
+
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - id: 'auth'
+  #       name: 'Authenticate to Google Cloud'
+  #       uses: 'google-github-actions/auth@v1'
+  #       with:
+  #         credentials_json: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
+  #     - name: use nodejs
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '16.x'
+  #     - run: npm install -g firebase-tools
+  #     - run: npm install
+  #     - run: CI=false npm run build
+  #     - run: |
+  #         echo ${{ steps.auth.outputs.project_id }}
+  #         firebase use --add ${{ steps.auth.outputs.project_id }}
+  #         firebase deploy --only hosting # --token $FIREBASE_TOKEN
+
   build_and_deploy:
-    name: Deploy to firebase hosting
+    name: Deploy to s3
     environment: stage
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-
     steps:
       - uses: actions/checkout@v3
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       - name: use nodejs
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-      - run: npm install -g firebase-tools
-      - run: npm install
-      - run: CI=false npm run build
-      - run: |
-          echo ${{ steps.auth.outputs.project_id }}
-          firebase use --add ${{ steps.auth.outputs.project_id }}
-          firebase deploy --only hosting # --token $FIREBASE_TOKEN
+          node-version: 16.x
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Deploy
+        run: aws s3 sync ./public s3://${{ secrets.AWS_S3_BUCKET }}
+      # - name: Invalidate Cache
+      #   run: aws cloudfront create-invalidation --distribution-id
 
   
 env:
