--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -16,49 +16,23 @@ jobs:
     #   id-token: 'write'
 
     steps:
-      - uses: actions/checkout@v2
-      # - id: 'auth'
-      #   name: 'Authenticate to Google Cloud'
-      #   uses: 'google-github-actions/auth@v1'
-      #   with:
-      #     credentials_json: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
+      - uses: actions/checkout@v3
       - name: use nodejs
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
       - run: npm install -g firebase-tools
       - run: npm install
       - run: CI=false npm run build
-      - run: |
-          firebase use --add $FIREBASE_PROJECT_ID
-          firebase deploy --only hosting # --token $FIREBASE_TOKEN
-
-  # build_and_deploy:
-  #   name: Deploy to s3
-  #   environment: stage
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v2
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: us-east-1
-  #     - name: use nodejs
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 16.x
-  #     - name: Install dependencies
-  #       run: npm install
-  #     - name: Build
-  #       run: npm run build
-  #     - name: Deploy
-  #       run: aws s3 sync ./public s3://${{ secrets.AWS_S3_BUCKET }}
-      # - name: Invalidate Cache
-      #   run: aws cloudfront create-invalidation --distribution-id
-
+      - uses:
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          projectId: $FIREBASE_PROJECT_ID
+          channelId: live
+      # - run: |
+      #     firebase use --add $FIREBASE_PROJECT_ID
+      #     firebase deploy --only hosting # --token $FIREBASE_TOKEN
   
 env:
   FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
