--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          projectId: $FIREBASE_PROJECT_ID
+          projectId: ${{ env.FIREBASE_PROJECT_ID }}
           channelId: live
       # - run: |
       #     firebase use --add $FIREBASE_PROJECT_ID
