--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -35,6 +35,6 @@ jobs:
       #     firebase deploy --only hosting # --token $FIREBASE_TOKEN
   
 env:
-  FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+  # FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
   FIREBASE_PROJECT_ID: calcutta-admin-test
   REACT_APP_BUILD_ENV: dev
