--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 
 REACT_APP_API_REGION=us-east-1
-REACT_APP_API_URL=https://6jytd4w1f1.execute-api.us-east-1.amazonaws.com/prod
-REACT_APP_TOURNAMENT_SERVICE_API_URL=https://8kkx15bu20.execute-api.us-east-1.amazonaws.com/prod
-REACT_APP_SPORTS_SERVICE_API_URL=https://036sctaqe9.execute-api.us-east-1.amazonaws.com/prod
-REACT_APP_TOURNAMENT_SETTINGS_SERVICE_API_URL=https://qwry71aqkg.execute-api.us-east-1.amazonaws.com/prod
+REACT_APP_API_URL=https://8svl0awsyc.execute-api.us-east-1.amazonaws.com/prod
+REACT_APP_TOURNAMENT_SERVICE_API_URL=https://67tmn6bxb6.execute-api.us-east-1.amazonaws.com/prod
+REACT_APP_SPORTS_SERVICE_API_URL=https://bbdwchxp7a.execute-api.us-east-1.amazonaws.com/prod
+REACT_APP_TOURNAMENT_SETTINGS_SERVICE_API_URL=https://8avfpel7h0.execute-api.us-east-1.amazonaws.com/prod
 
 REACT_APP_AUTH_REGION=us-east-1
-REACT_APP_AUTH_USER_POOL_ID=us-east-1_uOQeKJ4OE
-REACT_APP_AUTH_APP_CLIENT_ID=60cno13f4qhhs9f38k0j71rtnu
+REACT_APP_AUTH_USER_POOL_ID=us-east-1_N69jrp7pB
+REACT_APP_AUTH_APP_CLIENT_ID=agbl6aqg6f2jvj9hg5ljpltrb
 
 REACT_APP_DEV_API_REGION=us-east-1
 REACT_APP_DEV_API_URL=https://l75gtebd86.execute-api.us-east-1.amazonaws.com/stage
