--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
-    "@aws-amplify/auth": "^3.3.3",
-    "@aws-amplify/core": "^3.4.4",
-    "@reach/router": "^1.3.4",
-    "antd": "^4.5.2",
-    "axios": "^0.21.1",
-    "moment": "^2.27.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "4.0.2"
+    "@ant-design/icons": "^5.2.0",
+    "@aws-amplify/auth": "^5.6.0",
+    "@aws-amplify/core": "^5.8.0",
+    "antd": "^5.8.0",
+    "axios": "^1.4.0",
+    "moment": "^2.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,9 +37,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.0",
     "jest-sonar-reporter": "^2.0.0",
     "msw": "^0.26.1"
   }
