--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REACT_APP_API_URL=https://8svl0awsyc.execute-api.us-east-1.amazonaws.com/prod
 REACT_APP_TOURNAMENT_SERVICE_API_URL=https://67tmn6bxb6.execute-api.us-east-1.amazonaws.com/prod
 REACT_APP_SPORTS_SERVICE_API_URL=https://bbdwchxp7a.execute-api.us-east-1.amazonaws.com/prod
 REACT_APP_TOURNAMENT_SETTINGS_SERVICE_API_URL=https://8avfpel7h0.execute-api.us-east-1.amazonaws.com/prod
-REACT_APP_MANAGEMENT_SERVICE_API_URL=
+REACT_APP_MANAGEMENT_SERVICE_API_URL=https://np8a6whlw2.execute-api.us-east-1.amazonaws.com/prod
 
 REACT_APP_AUTH_REGION=us-east-1
 REACT_APP_AUTH_USER_POOL_ID=us-east-1_N69jrp7pB
