--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -16,8 +16,7 @@ jobs:
       - name: use nodejs
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-      - run: npm install -g firebase-tools
+          node-version: 18
       - run: npm install
       - run: CI=false npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
